// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input tests should return content when value is boolean (false) 1`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (false) 2`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (false) 3`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (false) 4`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (true) 1`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (true) 2`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (true) 3`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (true) 4`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is number 1`] = `
<div>
  case 3
</div>
`;

exports[`input tests should return content when value is number 2`] = `
<div>
  case 3
</div>
`;

exports[`input tests should return content when value is number 3`] = `
<div>
  case 3
</div>
`;

exports[`input tests should return content when value is number 4`] = `
<div>
  case 3
</div>
`;

exports[`input tests should return content when value is string 1`] = `
<div>
  case 4
</div>
`;

exports[`input tests should return content when value is string 2`] = `
<div>
  case 4
</div>
`;

exports[`input tests should return content when value is string 3`] = `
<div>
  case 4
</div>
`;

exports[`input tests should return content when value is string 4`] = `
<div>
  case 4
</div>
`;

exports[`misc tests should return content from first occurence when multiple matches 1`] = `
<div>
  case 3
</div>
`;

exports[`misc tests should return content from first occurence when multiple matches 2`] = `
<div>
  case 3
</div>
`;

exports[`misc tests should return content from first occurence when multiple matches 3`] = `
<div>
  case 3
</div>
`;

exports[`misc tests should return content from first occurence when multiple matches 4`] = `
<div>
  case 3
</div>
`;

exports[`with default case should return content from first case 1`] = `
<div>
  case 0
</div>
`;

exports[`with default case should return content from first case 2`] = `
<div>
  case 0
</div>
`;

exports[`with default case should return content from first case 3`] = `
<div>
  case 0
</div>
`;

exports[`with default case should return content from first case 4`] = `
<div>
  case 0
</div>
`;

exports[`with default case should return content from second case 1`] = `
<div>
  case 1
</div>
`;

exports[`with default case should return content from second case 2`] = `
<div>
  case 1
</div>
`;

exports[`with default case should return content from second case 3`] = `
<div>
  case 1
</div>
`;

exports[`with default case should return content from second case 4`] = `
<div>
  case 1
</div>
`;

exports[`with default case should return content from third case 1`] = `
<div>
  case 2
</div>
`;

exports[`with default case should return content from third case 2`] = `
<div>
  case 2
</div>
`;

exports[`with default case should return content from third case 3`] = `
<div>
  case 2
</div>
`;

exports[`with default case should return content from third case 4`] = `
<div>
  case 2
</div>
`;

exports[`with default case should return null 1`] = `
<div>
  default
</div>
`;

exports[`with default case should return null 2`] = `
<div>
  default
</div>
`;

exports[`with default case should return null 3`] = `
<div>
  default
</div>
`;

exports[`with default case should return null 4`] = `
<div>
  default
</div>
`;

exports[`without default case should return content from first case 1`] = `
<div>
  case 0
</div>
`;

exports[`without default case should return content from first case 2`] = `
<div>
  case 0
</div>
`;

exports[`without default case should return content from first case 3`] = `
<div>
  case 0
</div>
`;

exports[`without default case should return content from first case 4`] = `
<div>
  case 0
</div>
`;

exports[`without default case should return content from second case 1`] = `
<div>
  case 1
</div>
`;

exports[`without default case should return content from second case 2`] = `
<div>
  case 1
</div>
`;

exports[`without default case should return content from second case 3`] = `
<div>
  case 1
</div>
`;

exports[`without default case should return content from second case 4`] = `
<div>
  case 1
</div>
`;

exports[`without default case should return content from third case 1`] = `
<div>
  case 2
</div>
`;

exports[`without default case should return content from third case 2`] = `
<div>
  case 2
</div>
`;

exports[`without default case should return content from third case 3`] = `
<div>
  case 2
</div>
`;

exports[`without default case should return content from third case 4`] = `
<div>
  case 2
</div>
`;

exports[`without default case should return null 1`] = `null`;

exports[`without default case should return null 2`] = `null`;

exports[`without default case should return null 3`] = `null`;

exports[`without default case should return null 4`] = `null`;
